# cor-asv-ann

./: .dockerignore  .gitignore  .gitmodules  .pylintrc  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  blstm_seq2seq_beam.py  data-processing  keras_train.py  ocrd-tool.json  pyproject.toml  requirements.txt  requirements_test.txt  s2s.3lstm+blstm320.beam.large.h5.csv  s2s.3lstm+blstm320.beam.large.h5.gnuplot  s2s.3lstm+blstm320.beam.large.h5.sed  s2s.csv2png.gnuplot  s2s.log2csv.sed  scheme.tex  setup.py  transfer-dta-lm.py
.circleci/: config.yml
ocrd_cor_asv_ann/: __init__.py
ocrd_cor_asv_ann/lib/: __init__.py  alignment.py  attention.py  callbacks.py  keras_train.py  seq2seq.py
ocrd_cor_asv_ann/scripts/: __init__.py  compare.py  eval.py  proc.py  repl.py  train.py
ocrd_cor_asv_ann/wrapper/: __init__.py  align.py  cli.py  evaluate.py  join.py  mark.py  ocrd-tool.json  transcode.py
tests/: conftest.py  test_all.py
